Final, con pruebas realizadas en postman y añadido el swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=S05T01N02GraneroEduard
 server.port = 9001
 
 Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/officeddbb
+spring.datasource.url=jdbc:mysql://localhost:3306/flowerDDBB
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
